# imprima.app

./: README.md  build.sh
plata/backend/app/: pyproject.toml
plata/backend/app/alembic/versions/: 101654423871_create_cep_table.py  13f14b9d6f66_create_merchant_type_atribute_table.py  5199d73df58e_create_order_item_table.py  65c0fbcae3ad_create_partner_table.py  6c1769af360c_create_type_table.py  8d1ed856afb4_create_product_table.py  a4060ec5f560_create_creation_cep.py  a8004ac59977_create_category_table.py  ce946f4695cb_create_merchant_table.py  d93661cfa6cc_create_kind_table.py  e7f817a3d85a_create_order_table.py
plata/backend/app/app/: main.py  utils.py
plata/backend/app/app/api/: api_router.py
plata/backend/app/app/api/endpoints/: category.py  checkout.py  image.py  images.py  kind.py  kinds.py  merchant.py  merchant_type_attribute.py  order.py  product.py  stark.py
plata/backend/app/app/core/: config.py
plata/backend/app/app/crud/: __init__.py  crud_category.py  crud_creation_cep.py  crud_kind.py  crud_merchant.py  crud_merchant_type_attribute.py  crud_order.py  crud_order_item.py  crud_product.py  crud_type.py
plata/backend/app/app/db/: base_class.py
plata/backend/app/app/models/: __init__.py  category.py  creation_cep.py  kind.py  merchant.py  merchant_type_attribute.py  order.py  order_item.py  partner.py  product.py  type.py
plata/backend/app/app/schemas/: __init__.py  category.py  creation_cep.py  kind.py  merchant.py  merchant_type_attribute.py  order.py  order_item.py  partner.py  product.py  type.py
plata/backend/app/app/service/: __init__.py  checkout_service.py  order_service.py  starkbank_service.py
plata/backend/app/app/static/: teste.txt
plata/backend/app/app/static/alo/: asset-manifest.json  index.html
plata/backend/app/app/static/alo/static/css/: 2.1a40a44d.chunk.css  2.1a40a44d.chunk.css.map  2.42806d53.chunk.css  2.42806d53.chunk.css.map  main.042323d8.chunk.css  main.042323d8.chunk.css.map  main.0743afcf.chunk.css  main.0743afcf.chunk.css.map  main.1c38a04b.chunk.css  main.1c38a04b.chunk.css.map  main.210b1e82.chunk.css  main.210b1e82.chunk.css.map  main.34e3ab80.chunk.css  main.34e3ab80.chunk.css.map  main.3541d07a.chunk.css  main.377c0d5e.chunk.css  (+8 more)
plata/backend/app/app/static/css/: banner.css
plata/backend/app/app/templates/: banner.html  criador.html  estampa.html  homepage.html  payment_return.html  testar.html
plata/backend/app/app/web/: deps.py  web_router.py
plata/backend/app/app/web/endpoints/: banner.py  criador.py  estampa.py  finish.py  home.py  payment.py  testar.py
plata/backend/app/lib/mage/: .gitattributes  .gitignore  README.md  gui.py  main.py  requirements.txt  run_file_example.bat  run_file_example2.bat
plata/backend/app/lib/mage/docs/: CREDITS.md  MODELS.md
plata/backend/app/lib/mage/docs/other/: try.ipynb
plata/backend/app/lib/mage/libs/: networks.py
xplata/: Dockerfile  docker-compose.yml  pyproject.toml  run.py
xplata/app/: main.py
xplata/app/static/: door.js
xplata/app/static/alo/static/js/: main.31d1d059.chunk.js.map
xplata/app/templates/: homepage.html
xplata/app/views/api/: kind.py
xplata/migrations/: env.py
xplata/migrations/versions/: 9c28fa5b044e_initial.py
xplata/plata/: Dockerfile  docker-compose.yml  pyproject.toml
xplata/plata/postgres-data/base/13395/: 1247  1249  1259  16384  16387  16389  16397  16398  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
xplata/plata/postgres-data/global/: pg_control  pg_internal.init
xplata/plata/postgres-data/pg_stat/: db_0.stat  db_13395.stat  global.stat
xplata/plata/src/plata/: main.py
xplata/plata/src/plata/lib/mage/: requirements.txt
xplata/plata/src/plata/static/alo/: asset-manifest.json
xplata/plata/src/plata/views/: banner.py  index.py  testar.py
xplata/plata/src/plata/views/api/: image.py
xplata/plata/tests/: conftest.py
(+280 files in other folders)
