[tool.poetry]
name = "plata"
version = "0.1.0"
description = ""
authors = ["Diego Cardoso <dieg0card0s0@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
fastapi = "^0.63.0"
gino-starlette = "0.1.1" # gino = {extras = ["starlette"], version = "^1.0.0"}
importlib_metadata = { version = "^1.3.0", python = "<3.8" }
uvicorn = "^0.13.4"
gunicorn = "^20.1.0"
alembic = "^alembic"
psycopg2 = "^2.8.6"
jinja2 = "^2.11.3"
aiofiles = "^0.6.0"

pywebview = "3.2"
numpy = "^1.18.2"
tqdm = "4.43.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}
torchvision = "0.2.2.post3"
opencv_contrib_python = "4.2.0.34"
scipy = "1.4.1"
tensorflow = "2.2.1"
gluoncv = "0.7.0"
gdown = "3.11.1"
scikit_image = "0.18.1"
Pillow = "7.1.2"
mxnet = "1.6.0"
cython = "0.29.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.plugins."plata.modules"]
"index" = "plata.views.index"
"users" = "plata.views.users"
"testar" = "plata.views.testar"
"banner" = "plata.views.banner"
"api.kind" = "plata.views.api.kind"
"api.image" = "plata.views.api.image"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
